upgrade multi graph slam and fix lidar topic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,34 @@
 services:
-  swarm_sim:
+  sim:
     build: .
     image: ros2-jazzy-swarm-sim
-    container_name: rosette_swarm
+    container_name: rosette_sim
     runtime: nvidia
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=all
-      # --- GUI CONFIGURATION ---
-      - GUI=vnc # Change to 'host' for native windows
-      - DISPLAY=:1 # Change to ${DISPLAY} for native windows
-    ports:
-      - "6080:6080" # Web VNC (NoVNC)
-      - "5901:5901" # Direct VNC (Client)
+      - GUI=vnc
+      - DISPLAY=:1
+    network_mode: host # Essential for ROS 2 communication between containers
     volumes:
       - ./src:/root/ros2_ws/src
       - /tmp/.X11-unix:/tmp/.X11-unix
-      # - ~/.Xauthority:/root/.Xauthority:rw # Uncomment for native X11
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [ gpu ]
+    ipc: host
+    stdin_open: true
+    tty: true
+
+  slam:
+    image: aserbremen/mrg_slam_jazzy
+    container_name: rosette_slam
+    runtime: nvidia
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=all
+    network_mode: host # Must match 'sim' for DDS discovery
+    volumes:
+      - ./src:/home/ubuntu/mnt_src # Mount scripts separately to avoid breaking the workspace
+      # - ./src:/home/ubuntu/ros2_ws/src # DISABLED: Shadows pre-installed source.
+      # - ./src/Multi-Robot-Graph-SLAM:/root/ros2_ws/src/Multi-Robot-Graph-SLAM # Already covered by ./src
     ipc: host
     stdin_open: true
     tty: true
