--- a/supervisord.conf
+++ b/supervisord.conf
@@ -17,4 +17,9 @@ command=/usr/bin/x11vnc -display :1 -nopw -forever -shared -rfbport 5901
 autorestart=true
 priority=300
 
+[program:novnc]
+command=websockify --web=/usr/share/novnc 6080 localhost:5901
+autorestart=true
+priority=400
+
 
